# Course-work_05

./: .gitignore  README.md  main.py  pyproject.toml
src/: classes.py  database.py  employers.py  queries.sql
